--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5000
-CONNECTION_URL = mongodb+srv://ashishjha7213:Ashishjha9560@cluster0.kmvatkn.mongodb.net/?retryWrites=true&w=majority
+CONNECTION_URL = mongodb+srv://ashishjha7213:Ashishjha7213@cluster0.vezvrcu.mongodb.net/?retryWrites=true&w=majority
